--- a/docs/projects/project_descriptions.json
+++ b/docs/projects/project_descriptions.json
@@ -6,5 +6,6 @@
     "2bd44a8e-4861-442a-ade5-e8f5ff5c9efc_Export-de0a0234-dad5-43e2-8feb-16a2275cbee0": "A simple cmd tool for solving Wordle puzzles",
     "4210e3cc-7276-48b4-acfd-1195ac742ff7_Export-c2a619ba-5bac-41e8-92a1-83a19beb0fe6": "A model comparison toolkit",
     "55c022a8-a693-4f9f-87ad-8265e2784e4f_Export-36f09927-f227-4a30-aee3-7570e2129f6b": "A cross-platform logging app for a clinical research trial",
-    "e90b60d0-9a6e-4087-8da2-59bee7ab5b62_Export-bbe67d9f-20f4-432f-9863-b51f07e29701": "A DL image classification toolkit/webscraping exploration"
+    "e90b60d0-9a6e-4087-8da2-59bee7ab5b62_Export-bbe67d9f-20f4-432f-9863-b51f07e29701": "A DL image classification toolkit/webscraping exploration",
+    "3a08881b-91aa-496a-abfd-4fb91d82d30c_Export-f7c0bcc1-4382-43dc-96e5-02b2350ef080": "Scrape and visualise embeddings for live real estate listings"
 }
