--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 github-pages-env/
+docs/projects/3a08881b-91aa-496a-abfd-4fb91d82d30c_Export-f7c0bcc1-4382-43dc-96e5-02b2350ef080/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
